# platzi-nlp

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: 01_reviews.ipynb  02_reviews.ipynb  03_transformers.ipynb  04_fine_tunning.ipynb
utils/: paths.py
